fix(footer): icons spacing and home icon

--- a/css/global.css
+++ b/css/global.css
@@ -83,29 +83,48 @@ header#cabecalho nav ul li.pagina-selecionada > a {
   filter: brightness(80%);
 }
 
-footer{
-  margin-bottom: 0px;
+footer {
   display: flex;
-  justify-content: end;
-  column-gap: 2.5rem;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  justify-content: space-between;
   background-color: #32382c;
   position: fixed;
   width: 100%;
   bottom: 0;
   padding: 5px 2rem;
-  }
-  
-  footer a{
-    text-decoration: none;
-    color: #bebebe;
-    font-size: 36px;
-  }
-  
-  footer a:hover{
-    filter: brightness(120%);
-  }
+}
+
+.logos {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.icons {
+  display: flex;
+  gap: 22px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #bebebe;
+  font-size: 36px;
+}
+
+.fa-facebook {
+  color: #3b5998;
+}
+
+.fa-twitter {
+  color: #1da1f2;
+}
+
+.fa-linkedin {
+  color: #0a66c2;
+}
+
+footer a:hover {
+  filter: brightness(120%);
+}
 
 @media (max-width: 768px) {
   header#cabecalho nav ul li {
@@ -118,15 +137,41 @@ footer{
   }
 }
 
-footer img{
+footer img {
   height: 38px;
   width: 100px;
-  border: none;
-  display: inline;
-  margin-left: -90%;
-  position: absolute;
 }
 
-.logoschneider img{
-  margin-left: -85%;
+.icon-home {
+  position: fixed;
+  right: 1rem;
+  bottom: 4rem;
+  cursor: pointer;
+  z-index: 9999;
+  transition: filter 200ms;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
+.icon-home:hover {
+  filter: brightness(1.3);
+}
+
+.icon-home:hover:active {
+  filter: brightness(0.8);
+}
+
+.fa-home {
+  color: var(--white);
+  font-size: 2.6rem;
+  padding: 0.7rem;
+  background-color: var(--green);
+  border: 2px solid var(--dark-green);
+  border-radius: 9999px;
+}
+
+footer img {
+  border: 0;
 }
